--- a/suggestions/templates/suggestions/layout.html
+++ b/suggestions/templates/suggestions/layout.html
@@ -42,6 +42,7 @@
         <a href="https://discovernative.com/al/visit.php?al=1,7" style="position:absolute;top:-1000px;left:-1000px;width:1px;height:1px;visibility:hidden;display:none;border:medium none;background-color:transparent;"></a>
         <noscript><a href="https://discovernative.com/al/visit.php?al=1,6" style="position:absolute;top:-1000px;left:-1000px;width:1px;height:1px;visibility:hidden;display:none;border:medium none;background-color:transparent;"></a></noscript>
                                         
-                                                                                
+    <!--Interstitial-->
+    <script data-cfasync="false" type="text/javascript" src="https://www.dexpredict.com/a/display.php?r=3993843"></script>                                                                 
 </body>
 </html>
