Commented native ads

--- a/suggestions/templates/suggestions/index.html
+++ b/suggestions/templates/suggestions/index.html
@@ -96,7 +96,7 @@
             </div>
 
             <div class="player-control">
-                <div id="awn-z3978951"></div>
+                <!--   <div id="awn-z3978951"></div>  -->
             </div>
             
         </div>
@@ -146,7 +146,7 @@
 
     <div class="tags-control">
         <div class="tags-control-2">
-            <div id="awn-z3979063"></div>
+            <!--  <div id="awn-z3979063"></div>  -->
         </div>
     </div>
     
